--- a/style.css
+++ b/style.css
@@ -4,4 +4,11 @@
     padding: 0;
 }
 
+.bigShow{
+    height: 20vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 @media(min-width:600px) and (max-width:950px)
